Fix test case report message overflow

--- a/madcow-project/src/resources/report/src/less/views/testcase.less
+++ b/madcow-project/src/resources/report/src/less/views/testcase.less
@@ -14,10 +14,20 @@
   padding: 30px;
 
   table {
+    max-width: 100%;
     border: 0;
 
     th:first-child {
       width: 30px;
+    }
+
+    td.step-message {
+      white-space: -moz-pre-wrap !important;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      white-space: -webkit-pre-wrap;
+      word-break: break-all;
+      white-space: normal;
     }
   }
 
